# text_classifire

./: README.md  pyproject.toml  text_cl.ipynb  text_classifier.ipynb
