[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Talafhamohammad-cloud <josephtelfah@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
